--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>Sketch Pad</title>
 	</head>
 	<body>
+		<button onclick="clearButton()">Clear</button>
+		<button onclick="resetButton()">Reset</button>
 		<div class="container"></div>
 		
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
