Added clear/reset functionality to the buttons; user can now change the amount of squares in the grid

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 		<title>Sketch Pad</title>
 	</head>
 	<body>
-		<button onclick="clearButton()">Clear</button>
-		<button onclick="resetButton()">Reset</button>
 		<div class="container"></div>
+
+		<div class="buttons">
+			<button onclick="clearButton()">Clear</button>
+			<button onclick="resetButton()">Reset</button>
+		</div>
 		
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="script.js"></script>
